# FidelityFX-CAS

./: .gitlab-ci.yml  README.md
CasCmdLine/: CasCmdLine.cpp  CasCmdLine.sln  CasCmdLine.vcxproj  CasCmdLine.vcxproj.filters  README.md  pch.cpp  pch.hpp
CasCmdLine/Shaders/: CAS_main.hlsl  CompiledShader_NoScaling=0_Linear=0.h  CompiledShader_NoScaling=0_Linear=1.h  CompiledShader_NoScaling=1_Linear=0.h  CompiledShader_NoScaling=1_Linear=1.h  FxBatchCompilerScript.fxbc
sample/: CMakeLists.txt
sample/media/: readme.md
sample/src/DX12/: CAS_CS.cpp  CAS_Renderer.cpp  CAS_Renderer.h  CAS_Sample.cpp  CMakeLists.txt
sample/src/VK/: CAS_CS.cpp  CAS_Renderer.cpp  CAS_Renderer.h  CAS_Sample.cpp  CMakeLists.txt  stdafx.h
